refined homepage and about page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
@@ -11,6 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/shared.css" rel="stylesheet" type="text/css">
+  <link href="css/old-webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -45,13 +46,13 @@
   <div class="section" ><img src="images/Concept-banner2.svg" alt="" class="image-10 blue-image">
     <a href="http://www.freepik.com"><img src="images/Concept-banner.svg" alt="Designed by fullvector / Freepik" class="image-9"></a>
     <img src="images/Concept-banner1.svg" alt="" class="image-8">
-    <div class="div-centered-v"><img src="images/Concepts.svg" alt="" class="image-11">
+    <div class="container"><img src="images/Concepts.svg" alt="" class="image-11">
       <p class="normal-text page-banner-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</p>
     </div>
   </div>
   <div class="section scrollspy" id="section_concepts">
-    <div class="div-centered-v">
-      <div class="section-title">Core Concepts</div>
+    <div class="container">
+      <div class="page-title">Core Concepts</div>
       <div class="section-title-line blue-gradient"></div>
       <p class="normal-text halfway-paragraph">Our Spring semester’s designs include low fidelity and middle fidelity screens for a potential next generation of our client’s software for traders. Here we describe some of the features:</p>
       <div class="div-normal"><img src="images/mid-fi1.png" srcset="images/mid-fi1-p-500.png 500w, images/mid-fi1-p-800.png 800w, images/mid-fi1-p-1080.png 1080w, images/mid-fi1.png 1440w" sizes="(max-width: 767px) 80vw, (max-width: 4500px) 32vw, 1440px" alt="" class="image-right-gap">
@@ -85,8 +86,8 @@
     </div>
   </div>
   <div class="section scrollspy" id="section_process">
-    <div class="div-centered-v">
-      <div class="section-title">Process</div>
+    <div class="container">
+      <div class="page-title">Process</div>
       <div class="section-title-line blue-gradient"></div>
       <p class="normal-text halfway-paragraph">Our team conducted a number of ideating activities that led to concrete ideas for low-fi and mid-fi prototypes, which we later evaluated by speed dating with our client and proxy users.</p><img src="images/blue-card.svg" alt="">
       <div class="title">Ideating</div>
@@ -107,7 +108,7 @@
       </div>
       <div class="title">Initial Design Idea Testing</div>
       <p class="normal-text halfway-paragraph">Ideas that successfully passed through speed dating were combined to create low fidelity prototypes, then refined into middle fidelity quality after consulting proxy users and clients.</p>
-      <div class="div-centered-v noedge"><img src="images/eval.png" srcset="images/eval-p-500.png 500w, images/eval-p-800.png 800w, images/eval-p-1080.png 1080w, images/eval.png 1168w" sizes="(max-width: 767px) 80vw, (max-width: 1825px) 64vw, 1168px" alt="" class="image-18">
+      <div class="container noedge"><img src="images/eval.png" srcset="images/eval-p-500.png 500w, images/eval-p-800.png 800w, images/eval-p-1080.png 1080w, images/eval.png 1168w" sizes="(max-width: 767px) 80vw, (max-width: 1825px) 64vw, 1168px" alt="" class="image-18">
         <div>
           <p class="small-paragraph bold-text">Main Feedback</p>
           <p class="small-paragraph">We received feedback not only on our own designs, but also queried proxy<br>users regarding their preferences in data visualization tools for trading.<br>In general, feedback fell into one of four categories: data analytics, team <br>communication and analysis, existing data visualizations and reporting.<br>Overall, users generally supported quick and accurate sharing of report<br>information and data analytics, which ties into our concept of closure as<br>well as focusing on better data representations (visualizations and analytics).</p>
@@ -117,7 +118,7 @@
       <p class="normal-text halfway-paragraph">After reflecting on the feedback from our testing, we iterated upon our low fidelity screens and developed secondary low fidelity and a first round of middle fidelity work.</p><img src="images/mid-fi1.png" srcset="images/mid-fi1-p-500.png 500w, images/mid-fi1-p-800.png 800w, images/mid-fi1-p-1080.png 1080w, images/mid-fi1.png 1440w" sizes="(max-width: 1800px) 80vw, 1440px" alt="" class="image-19"><img src="images/midfi2.png" srcset="images/midfi2-p-500.png 500w, images/midfi2-p-800.png 800w, images/midfi2-p-1080.png 1080w, images/midfi2.png 1440w" sizes="(max-width: 1800px) 80vw, 1440px" alt=""></div>
   </div>
   <div class="section">
-    <div class="div-centered-v">
+    <div class="container">
       <div class="title">To Be Continued...</div>
       <p class="normal-text halfway-paragraph">Now that we have completed a number of middle fidelity works, we hope to continue iterating upon our design and present a series of concepts to our user’s clients during the month of June, after which we will incorporate user feedback to develop our final proposed designs and complete a set of high fidelity prototypes.</p>
     </div>
