--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -30,20 +30,20 @@
     </div>
 </div>
 
-<div class="homepage-banner">
-    <div class="div-centered-v">
+<div class="homepage-banner banner">
+    <div class="container">
         <div class="hp-banner-title">Re-shaping a Trader’s Digital Experience</div>
         <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
-        <a href="https://www.freepik.com/" class="banner-img"><img src="images/homepage/0-banner-illustration.svg" alt="Designed by fullvector / Freepik" class="banner-img"></a>
+        <a href="https://www.freepik.com/" class="banner-img-homepage"><img src="images/homepage/0-banner-illustration.svg" alt="Designed by fullvector / Freepik" class="banner-img-homepage"></a>
     </div>
 </div>
 
 <!-- Our Client -->
-<div class="homepage-section-wrapper">
-    <div class="div-centered-v">
+<div class="section">
+    <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="homepage-title">Our Client</div>
-        <div class="flex-h">
+        <div class="section-title">Our Client</div>
+        <div class="flex-h space-above">
             <img class="image left shadowed" src="images/homepage/1-client-img.png" alt="">
             <div>
                 <p>As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations on the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</p>
@@ -54,11 +54,11 @@
 </div>
 
 <!-- Our Project -->
-<div class="homepage-section-wrapper bg-light-purple">
-    <div class="div-centered-v">
+<div class="section bg-light-purple">
+    <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="homepage-title">Our Project</div>
-        <div class="flex-h">
+        <div class="section-title">Our Project</div>
+        <div class="flex-h space-above">
             <div id="our-project-content">
                 <p>In the scope of this project, Liquidnet aims to do the following: better understand the state of their many users while using their product, especially when dealing with time-sensitive alerts; define ways to understand their user’s behaviors and needs and translate needs into targeted content; and finally, explore the complexity of technology and data-driven design in the development of new products.</p>
                 <div class="even-wrapper">
@@ -82,10 +82,10 @@
 </div>
 
 <!-- Our Process -->
-<div class="homepage-section-wrapper">
-    <div class="div-centered-v">
+<div class="section">
+    <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="homepage-title">Our process</div>
+        <div class="section-title">Our process</div>
         <img src="images/homepage/3-process-bar.svg" alt="" style="width: 800px" class="hp-process-bar">
         <div class="flex-h">
             <div class="w-col-4 hp-process-card-wrapper">
@@ -111,12 +111,12 @@
 </div>
 
 <!-- Our Team -->
-<div class="homepage-section-wrapper bg-light-purple overflow-top">
-    <div class="div-centered-v">
+<div class="section bg-light-purple overflow-top">
+    <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="homepage-title">Our team</div>
-        <div class="flex-h">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
-        <img data-aos="fade-up" src="images/homepage/4-team-button.png" alt="" class="img-button shadowed">
+        <div class="section-title">Our team</div>
+        <div class="flex-h space-above">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
+        <img data-aos="fade-up" src="images/homepage/4-team-button.png" alt="" class="img-button shadowed space-above">
     </div>
 </div>
 
