--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -11,6 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/shared.css" rel="stylesheet" type="text/css">
+  <link href="css/old-webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -31,13 +32,13 @@
     <img src="images/Ellipse2.svg" alt="" class="image-10">
     <a href="http://www.freepik.com"><img src="images/research-banner.svg" alt="Designed by fullvector / Freepik" class="image-9"></a>
     <img src="images/Ellipse1.svg" alt="" class="image-8">
-    <div class="div-centered-v"><img src="images/Research.svg" alt="" class="image-11">
+    <div class="container"><img src="images/Research.svg" alt="" class="image-11">
       <p class="normal-text page-banner-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</p>
     </div>
   </div>
   <div class="section">
-    <div class="div-centered-v">
-      <div class="section-title">Research Overview</div>
+    <div class="container">
+      <div class="page-title">Research Overview</div>
       <div class="section-title-line"></div>
       <p class="normal-text halfway-paragraph">Liquidnet is a dark pool brokeage that serves institutional traders. Our client approached us with the following prompt.</p>
       <div class="card research-card"><img src="images/amplifierquestionmark.svg" alt="" class="card-icon">
@@ -53,8 +54,8 @@
       <p class="normal-text halfway-paragraph">We planned out the project following the double diamond process. The first diamond is about exploring the problem space with an open mind, and identifying user need.</p><img src="images/dd.png" width="100" srcset="images/dd-p-500.png 500w, images/dd-p-800.png 800w, images/dd.png 1000w" sizes="80vw" alt="" class="image-13"></div>
   </div>
   <div class="section">
-    <div class="div-centered-v">
-      <div class="section-title">User Research</div>
+    <div class="container">
+      <div class="page-title">User Research</div>
       <div class="section-title-line"></div>
       <p class="normal-text halfway-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="title">Methods</div>
@@ -122,7 +123,7 @@
             </div>
           </div>
           <div data-w-tab="Tab 4" class="tab-inpage-content w-tab-pane">
-            <div class="div-centered-v"><img src="images/image.png" srcset="images/image-p-500.png 500w, images/image.png 828w" sizes="64vw" alt="" class="image-center">
+            <div class="container"><img src="images/image.png" srcset="images/image-p-500.png 500w, images/image.png 828w" sizes="64vw" alt="" class="image-center">
               <p class="normal-text halfway-paragraph">We used affinity mapping to identify common user need and pain points.</p>
             </div>
           </div>
@@ -250,8 +251,8 @@
     </div>
   </div>
   <div class="section">
-    <div class="div-centered-v">
-      <div class="section-title">Product Research</div>
+    <div class="container">
+      <div class="page-title">Product Research</div>
       <div class="section-title-line"></div>
       <p class="normal-text halfway-paragraph">How does the current product serves the need of users? How is the product used in the context? What are the things that can be imporoved?</p>
       <div class="title">Methods</div>
@@ -374,8 +375,8 @@
     </div>
   </div>
   <div class="section">
-    <div class="div-centered-v">
-      <div class="section-title">Research Synthesis</div>
+    <div class="container">
+      <div class="page-title">Research Synthesis</div>
       <div class="section-title-line"></div>
       <p class="normal-text halfway-paragraph">After carefully analyzing the institutional trading industry, our users (pimarily traders), and the Liquidnet product, we reached a point where we started synthesizing all this data. We redefined the original prompt and used brainstorming activities to uncover our opportunity areas.</p>
       <div class="title">Compiling Insights</div>
@@ -394,7 +395,7 @@
         </div>
         <div class="w-tab-content">
           <div data-w-tab="Tab 1" class="tab-inpage-content w-tab-pane w--tab-active">
-            <div class="div-centered-v">
+            <div class="container">
               <div class="div-horizontal"><img src="images/walking-the-wall.JPG" srcset="images/walking-the-wall-p-800.jpeg 800w, images/walking-the-wall.JPG 1000w" sizes="(max-width: 767px) 64vw, (max-width: 3846px) 26vw, 1000px" alt="" class="image-right-gap">
                 <p class="normal-text">We gathered our product model, stakeholder map, affinity diagrams, and  user interview notes together and posted them on a board to look through all at once. Then, we took some time to create new insights and re-emphasized the most important user needs.</p>
               </div>
@@ -403,14 +404,14 @@
             </div>
           </div>
           <div data-w-tab="Tab 2" class="tab-inpage-content w-tab-pane">
-            <div class="div-centered-v">
+            <div class="container">
               <p class="normal-text halfway-paragraph">We generated questions that tried to answer the problems we found through walking the wall. The main goal here was to try to be specific enough to answer the user needs we identified, but also broad enough to create a whole design solution around it.</p>
               <p class="small-paragraph bold-text">Example Questions:</p>
               <p class="small-paragraph">How can we keep traders mentally alert to optimize their productivity?<br>How can traders be willing to revise their routines without sacrificing efficiency?<br>How can we design something visually articulate but familiar to traders?<br>How can we help traders better tackle work-life balance/avoid burnout? <br></p>
             </div>
           </div>
           <div data-w-tab="Tab 3" class="tab-inpage-content w-tab-pane">
-            <div class="div-centered-v">
+            <div class="container">
               <div class="div-horizontal"><img src="images/reverse.JPG" srcset="images/reverse-p-500.jpeg 500w, images/reverse-p-800.jpeg 800w, images/reverse.JPG 1000w" sizes="(max-width: 767px) 64vw, (max-width: 3846px) 26vw, 1000px" alt="" class="image-right-gap">
                 <p class="normal-text">We made assumptions based on our users’ needs and reversed each one. Then, we used this reversal to brainstorm a new service or feature offering. This set up the stage for preliminary solution exploration.</p>
               </div>
@@ -423,7 +424,7 @@
         </div>
       </div>
       <div class="title">Prioritizing Our Problem Areas</div>
-      <div class="div-centered-v noedge">
+      <div class="container noedge">
         <div class="div-horizontal"><img src="images/prop.png" srcset="images/prop-p-500.png 500w, images/prop.png 586w" sizes="(max-width: 479px) 80vw, (max-width: 991px) 420.5625px, 40vw" alt="" class="image-right-gap larger-pic">
           <p class="normal-text test">To sum up our most important problem areas and user needs, we created 15 How Might We... statements that highlight each individual issue we found and propose a solution based focus. We plotted these onto a matrix and considered Liquidnet’s feasibility of building the potential product and also how much value this product could bring to our client. We ended up choosing 5 major questions we wanted to solve below:</p>
         </div>
