--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -12,217 +12,203 @@
 </head>
 
 <body>
-  <div class="navbar">
-      <a href="index.html" class="nav-brand"></a>
-      <nav class="nav-menu">
-        <a href="index.html" class="mobile">Home</a>
-        <a href="research.html" >Research</a>
-        <a href="ideation.html" >Ideation</a>
-        <a href="design.html" >Design</a>
-        <a href="about.html" class="w--current">About</a>
-        <a href="glossary.html" >Glossary</a>
-      </nav>
-      <div class="menu-button w-nav-button mobile">
-        <div class="w-icon-nav-menu"></div>
-      </div>
+<div class="navbar">
+  <a href="index.html" class="nav-brand">
+    <img src="images/Utility/nav.png"/>
+  </a>
+  <nav class="nav-menu">
+    <a href="research.html" >Research</a>
+    <a href="ideation.html" >Ideation</a>
+    <a href="design.html" >Design</a>
+    <a href="about.html" class="active">About</a>
+    <a href="glossary.html" >Glossary</a>
+  </nav>
+  <div class="menu-button w-nav-button">
+    <div class="w-icon-nav-menu"></div>
+  </div>
+</div>
+
+<div class="banner section">
+  <div class="container">
+    <div class="page-title purple-text">About Us</div>
+    <div class="banner-paragraph">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
+  </div>
+  <img src="images/about/banner-right.svg" class="bg right">
+  <img src="images/about/banner-left.svg" class="bg left">
+</div>
+
+<div class="section">
+  <div class="container">
+    <div class="section-title">Team Members</div>
+    <div class="section-title-line purple-bg"></div>
   </div>
 
-  <div class="section-body">
-    <div class="flex-horizontal-container" id="about-banner">
-      <div class="section-body">
-        <div class="section-title">About Us</div>
-        <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
-      </div>
-      <a href="http://www.freepik.com"><img src="images/about-banner.svg" alt="Designed by fullvector / Freepik" class="img-banner about-banner-pic"></a>
-    </div>
-  </div>
-  <div class="section-body">
-    <div class="flex-horizontal-container">
-      <div class="section-title">Team Members</div>
-    </div>
-    <div class="flex-horizontal-container-right" >
-      <div class="section-title-bar"></div>
-    </div>
-    <!-- Emily's information -->
-    <div class="flex-horizontal-container">
-      <div class="flexblock-headshot">
-        <div class="emily-headshot"></div>
-      </div>
-      <div class="flexblock-heading">
-        <div class="about-name">Emily Gong</div>
-        <div class="title">CLIENT LEAD</div>
-        <div class="person-links">
-          <a href="#"><img src="images/about-icon1.png" class="link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
-      </div>
-      <div class="flexblock-text">
-        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-        <div class="text-descript-block">
-          <div class="text-descript-2">
-            <div class="text-descript-header">ABOUT ME</div>
-            <div class="text-descript-info">Experience in business intelligence and start-up culture brought me to HCI and user-centered design. </div>
-          </div>
-          <div class="text-descript-3">
-            <div class="text-descript-header">ALERT EGO</div>
-            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
-          </div>  
-        </div>    
+  <!-- Emily's information -->
+  <div class="container flex-h smaller-section">
+    <img src="images/about/emily.png" class="flexblock-headshot image left"/>
+    <div class="about-intro-header">
+      <div class="h3">Emily Gong</div>
+      <div class="b3 label grey-text">CLIENT LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
       </div>
     </div>
-
-    <!-- June's information -->
-    <div class="flex-horizontal-container">
-      <div class="flexblock-text">
-        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-        <div class="text-descript-block">
-          <div class="text-descript-2">
-            <div class="text-descript-header">ABOUT ME</div>
-            <div class="text-descript-info">My background in psychology and neuroscience began my leap into UX research related work. </div>
-          </div>
-          <div class="text-descript-3">
-            <div class="text-descript-header">ALERT EGO</div>
-            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
-          </div>  
-        </div>    
-      </div>
-      <div class="flexblock-heading-right">
-        <div class="about-name">June Liu</div>
-        <div class="title">QUANT RESEARCH LEAD</div>
-        <div class="person-links">
-          <a href="#"><img src="images/about-icon1.png" class="link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
-      </div>
-      <div class="flexblock-headshot">
-        <div class="june-headshot"></div>
-      </div> 
-    </div>
-
-    <!-- Yingli's information -->
-    <div class="flex-horizontal-container">
-      <div class="flexblock-headshot">
-        <div class="yingli-headshot"></div>
-      </div>
-      <div class="flexblock-heading">
-        <div class="about-name">Yingli Sieh</div>
-        <div class="title">QUAL RESEARCH LEAD</div>
-        <div class="person-links">
-          <a href="#"><img src="images/about-icon1.png" class="link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
-      </div>
-      <div class="flexblock-text">
-        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-        <div class="text-descript-block">
-          <div class="text-descript-2">
-            <div class="text-descript-header">ABOUT ME</div>
-            <div class="text-descript-info">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
-          </div>
-          <div class="text-descript-3">
-            <div class="text-descript-header">ALERT EGO</div>
-            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
-          </div>  
-        </div>    
-      </div>
-    </div>
-
-    <!-- Qian's information -->
-    <div class="flex-horizontal-container">
-      <div class="flexblock-text">
-        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-        <div class="text-descript-block">
-          <div class="text-descript-2">
-            <div class="text-descript-header">ABOUT ME</div>
-            <div class="text-descript-info">My background in psychology and neuroscience began my leap into UX research related work. </div>
-          </div>
-          <div class="text-descript-3">
-            <div class="text-descript-header">ALERT EGO</div>
-            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
-          </div>  
-        </div>    
-      </div>
-      <div class="flexblock-heading-right">
-        <div class="about-name">Qian Wang</div>
-        <div class="title">DEV LEAD</div>
-        <div class="person-links">
-          <a href="#"><img src="images/about-icon1.png" class="link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
-      </div>
-      <div class="flexblock-headshot">
-        <div class="qian-headshot"></div>
-      </div> 
-    </div>
-
-    <!-- Nina's information -->
-    <div class="flex-horizontal-container">
-      <div class="flexblock-headshot">
-        <div class="nina-headshot"></div>
-      </div>
-      <div class="flexblock-heading">
-        <div class="about-name">Nina Yang</div>
-        <div class="title">DESIGN LEAD</div>
-        <div class="person-links">
-          <a href="#"><img src="images/about-icon1.png" class="link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
-      </div>
-      <div class="flexblock-text">
-        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-      <div class="text-descript-block">
-          <div class="text-descript-2">
-            <div class="text-descript-header">ABOUT ME</div>
-            <div class="text-descript-info">As a trained designer and developer by trade, I am future-focused and interdisciplinary by nature.</div>
-          </div>
-          <div class="text-descript-3">
-            <div class="text-descript-header">ALERT EGO</div>
-            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
-          </div>  
-        </div>    
+    <div class="quote-bubble">
+      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="flex-h">
+        <div class="">
+          <div class="b3 label light-purple-text">ABOUT ME</div>
+          <div class="b3">Experience in business intelligence and start-up culture brought me to HCI and user-centered design. </div>
+        </div>
+        <div class="small-purple-section">
+          <div class="b3 label light-purple-text">ALERT EGO</div>
+          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="background">
-    <div class="section-body" id="blog-body">
-      <div class="flex-horizontal-container">
-        <div class="section-title">Snippets of Our Journey</div>
-      </div>
-      <div class="flex-horizontal-container-right" >
-        <div class="section-title-bar"></div>
-      </div>
-      <div class="flex-horizontal-container-spaced">
-        <div class="flexblock-text-2">
-          <div class="blog-box"></div>
-          <div class="blog-box"></div>
-          <div class="blog-box"></div>
+
+  <!-- June's information -->
+  <div class="container flex-h smaller-section">
+    <div class="quote-bubble">
+      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="flex-h">
+        <div class="">
+          <div class="b3 label light-purple-text">ABOUT ME</div>
+          <div class="b3">My background in psychology and neuroscience began my leap into UX research related work. </div>
         </div>
-        <div class="flexblock-text-2">
-          <div class="blog-box"></div>
-          <div class="blog-box"></div>
-          <div class="blog-box"></div>
-        </div>
-        <div class="flexblock-text-2">
+        <div class="small-purple-section">
+          <div class="b3 label light-purple-text">ALERT EGO</div>
+          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
         </div>
       </div>
-      <div class="flex-horizontal-container-spaced" id="blog-text">
+    </div>
+    <div class="about-intro-header right">
+      <div class="h3">June Liu</div>
+      <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+      </div>
+    </div>
+    <img src="images/about/june.png" class="flexblock-headshot image right"/>
+  </div>
+
+  <!-- Yingli's information -->
+  <div class="container flex-h smaller-section">
+    <img src="images/about/yingli.png" class="flexblock-headshot image left"/>
+    <div class="about-intro-header">
+      <div class="h3">Yingli Sieh</div>
+      <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+      </div>
+    </div>
+    <div class="quote-bubble">
+      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="flex-h">
+        <div class="">
+          <div class="b3 label light-purple-text">ABOUT ME</div>
+          <div class="b3">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
+        </div>
+        <div class="small-purple-section">
+          <div class="b3 label light-purple-text">ALERT EGO</div>
+          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Qian's information -->
+  <div class="smaller-section container flex-h">
+    <div class="quote-bubble">
+      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="flex-h">
+        <div class="">
+          <div class="b3 label light-purple-text">ABOUT ME</div>
+          <div class="b3">My background in psychology and neuroscience began my leap into UX research related work. </div>
+        </div>
+        <div class="small-purple-section">
+          <div class="b3 label light-purple-text">ALERT EGO</div>
+          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+        </div>
+      </div>
+    </div>
+    <div class="about-intro-header right">
+      <div class="h3">Qian Wang</div>
+      <div class="b3 label grey-text">DEV LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+      </div>
+    </div>
+    <img src="images/about/qian.png" class="flexblock-headshot image right"/>
+  </div>
+
+  <!-- Nina's information -->
+  <div class="smaller-section container flex-h">
+    <img src="images/about/nina.png" class="flexblock-headshot image left"/>
+    <div class="about-intro-header">
+      <div class="h3">Nina Yang</div>
+      <div class="b3 label grey-text">DESIGN LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+      </div>
+    </div>
+    <div class="quote-bubble">
+      <div class="b2 purple-text big-quote">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+      <div class="flex-h">
+        <div class="">
+          <div class="b3 label light-purple-text">ABOUT ME</div>
+          <div class="b3">As a trained designer and developer by trade, I am future-focused and interdisciplinary by nature.</div>
+        </div>
+        <div class="small-purple-section">
+          <div class="b3 label light-purple-text">ALERT EGO</div>
+          <div class="b3">Donec sed odio dui. Donec sed odio dui.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section bg-light-purple">
+  <div class="container">
+    <div class="section-title">Snippets of Our Journey</div>
+    <div class="section-title-line purple-bg"></div>
+    <div class="flex-h gallery">
+      <div class="blog">
+        <div class="blog-img"></div>
         <div class="blog-descript-info">Blog Title 1</div>
-        <div class="blog-descript-info">Blog Title 2</div>
-        <div class="blog-descript-info">Blog Title 3</div>
       </div>
-      <div class="flex-horizontal-container">
-        <div class="about-name">Want to read more about our journey?</div>
+      <div class="blog">
+        <div class="blog-img"></div>
+        <div class="blog-descript-info">Blog Title 1</div>
       </div>
-      <div class="flex-horizontal-container" id="learn-more">
-        <img src="images/button-learn-more.png" alt="Trufflin Logo">
+      <div class="blog">
+        <div class="blog-img"></div>
+        <div class="blog-descript-info">Blog Title 1</div>
       </div>
     </div>
   </div>
-  
-  <footer id="footer" class="footnote w-clearfix">
-    <div class="footer_content_wrapper">@ Copyright 2019</div><img src="images/Utility/Asset-73x.svg" alt="Designed by fullvector / Freepik" class="image-5"></footer>
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <!-- <script src="js/webflow.js" type="text/javascript"></script> -->
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <div class="section container center">
+    <div class="h2">Want to read more about our journey?</div>
+    <img class="b1 img-button" src="images/button-learn-more.png" alt="Trufflin Logo">
+  </div>
+</div>
+
+<!-- Footer -->
+<div class="footer-wrapper">
+  <p class="">Copyright © 2019 Designed and Coded by</p>
+  <img src="images/Utility/trufflin_logo.svg" alt="Trufflin Logo">
+</div>
+
 </body>
 </html>
