--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/coming-soon.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/coming-soon.html
@@ -19,7 +19,7 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="page-center">
-  <div class="section-title">Coming Soon</div>
+  <div class="page-title">Coming Soon</div>
   <div class="title"><a href="index.html">Back to Homepage</a></div>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
