mid point update

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -13,9 +13,7 @@
 
 <body>
 <div class="navbar">
-  <a href="index.html" class="nav-brand">
-    <img src="images/Utility/nav.png"/>
-  </a>
+  <a href="index.html" class="nav-brand"></a>
   <nav class="nav-menu">
     <a href="research.html" >Research</a>
     <a href="ideation.html" >Ideation</a>
