--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
 <div class="navbar homepage">
-    <a href="index.html" class="nav-brand">
-        <img src="images/Utility/nav_homepage.png"/>
-    </a>
+    <a href="index.html" class="nav-brand"></a>
     <nav class="nav-menu">
         <a href="research.html" >Research</a>
         <a href="ideation.html" >Ideation</a>
@@ -38,6 +37,7 @@
     </div>
 </div>
 
+<div id="nav_anchor"></div>
 <!-- Our Client -->
 <div class="section">
     <div class="container">
