--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_library_qian.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_library_qian.html
@@ -10,6 +10,8 @@
     <link href="css/component_library_qian.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
     <link href="images/Utility/trufflin_logo.png" rel="shortcut icon" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="js/project.js"></script>
 </head>
 <body>
 <div class="navbar">
