deleted qian's component css

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component-june.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component-june.html
@@ -15,25 +15,23 @@
 
 <body>
 <div class="navbar">
-  <a href="index.html" class="nav-brand">
-    <img src="images/Utility/nav.png"/>
-  </a>
-  <nav class="nav-menu">
-    <a href="research.html" >Research</a>
-    <a href="ideation.html" >Ideation</a>
-    <a href="design.html" >Design</a>
-    <a href="about.html" class="active">About</a>
-    <a href="glossary.html" >Glossary</a>
-  </nav>
-  <div class="menu-button w-nav-button">
-    <div class="w-icon-nav-menu"></div>
-  </div>
+    <a href="index.html" class="nav-brand"></a>
+    <nav class="nav-menu">
+        <a href="research.html" class="active">Research</a>
+        <a href="ideation.html" >Ideation</a>
+        <a href="design.html" >Design</a>
+        <a href="about.html">About</a>
+        <a href="glossary.html" >Glossary</a>
+    </nav>
+    <div class="menu-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+    </div>
 </div>
 
 <!-- Banner -->
 <div class="banner section">
   <div class="container">
-    <div class="page-title red-text">About Us</div>
+    <div class="page-title red-text">Research</div>
     <div class="banner-paragraph">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
   </div>
   <img src="images/research/right.svg" class="bg right">
