--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_library_qian.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_library_qian.html
@@ -7,7 +7,6 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/shared.css" rel="stylesheet" type="text/css">
-    <link href="css/component_library_qian.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
     <link href="images/Utility/trufflin_logo.png" rel="shortcut icon" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -19,8 +18,8 @@
     <nav class="nav-menu">
         <a href="research.html" >Research</a>
         <a href="ideation.html" >Ideation</a>
-        <a href="design.html" >Design</a>
-        <a href="about.html" class="active">About</a>
+        <a href="design.html" class="active">Design</a>
+        <a href="about.html">About</a>
         <a href="glossary.html" >Glossary</a>
     </nav>
     <div class="menu-button w-nav-button">
