--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/cl-yingli.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/cl-yingli.html
@@ -7,7 +7,6 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/shared.css" rel="stylesheet" type="text/css">
-  <link href="css/cl-yingli.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
   <link href="images/Utility/trufflin_logo.png" rel="shortcut icon" type="image/x-icon">
 </head>
@@ -39,67 +38,79 @@
 </div>
 
 <div class="section">
-  <div class="section">
     <div class="container">
-      <div class="card research-card"><img src="images/ideation/fake-icon.svg" alt="" class="card-icon-no-padding">
-        <div class="card-half-block">
+      <div class="card card-style1">
+        <img src="images/ideation/fake-icon.svg" alt="" class="card-icon">
+        <div>
           <div class="h2">Problem</div>
           <p class="b3">We need to understand the trader's daily interactions, both good and bad, with Liquidnet. Why do they use what they use?</p>
-        </div><img src="images/ideation/fake-icon.svg" alt="" class="card-icon-no-padding">
-        <div class="card-half-block">
+        </div>
+        <img src="images/ideation/fake-icon.svg" alt="" class="card-icon">
+        <div>
           <div class="h2">Challenge</div>
           <p class="paragraph-big">Our team had to understand Liquidnet 5 well enough level to design for Liquidnet’s future, without knowing every detail of it.</p>
         </div>
       </div>
+  </div>
+</div>
+
+<div class="section">
+  <div class="container flex-h even-wrapper">
+    <div class="flex-h">
+      <div class="space"></div>
+      <div class="arrow-text h3 text-center">Users</div>
+      <div class="space hline"></div>
+    </div>
+    <div class="flex-h">
+      <div class="space hline"></div>
+      <div class="arrow-text h3 text-center">Product</div>
+      <div class="space hline"></div>
+    </div>
+    <div class="flex-h">
+      <div class="space hline"></div>
+      <div class="arrow-text h3 text-center">Users + Product</div>
+      <div class="space"></div>
+    </div>
+  </div>
+  <div class="container flex-h even-wrapper">
+    <div class="text-box">
+      Many trader types emerged as we studied trader's priorities and metrics for success, with varying Liquidnet usage.
+    </div>
+    <div class="text-box">
+      Many trader types emerged as we studied trader's priorities and metrics for success, with varying Liquidnet usage.
+    </div>
+    <div class="text-box">
+      Many trader types emerged as we studied trader's priorities and metrics for success, with varying Liquidnet usage.
     </div>
   </div>
 </div>
 
 <div class="section">
-  <div class="smaller-section container flex-h no-padding">
-    <div class="h3" id="first-arrow">Users</div>
-    <img src="images/ideation/arrow.svg" alt="" class="arrow">
-    <div class="h3" id="middle-arrow">Product</div>
-    <img src="images/ideation/arrow.svg" alt="" class="arrow">
-    <div class="h3" id="last-arrow">Users + Product</div>
-  </div>
-  <div class="smaller-section container flex-h no-padding">
-    <img src="images/ideation/textbox.svg" alt="">
-    <img src="images/ideation/textbox.svg" alt="">
-    <img src="images/ideation/textbox.svg" alt="">
-  </div>
-</div>
-
-<div class="section">
-  <div class="smaller-section container flex-h" >
+  <div class="container flex-h" >
     <img src="images/about/nina.png" class="flexblock-headshot image left"/>
-    <div class="card-full-block">
-      <div class="h3">Persona 1 Job Title</div>
-        <div class="quote-bubble">
-          <div class="flex-h">
-            <div class="card-half-block">
+    <div>
+      <div class="card-title">Persona 1 Job Title</div>
+        <div class="quote-bubble flex-h even-wrapper bg-light-purple">
+            <div class="h-padding">
               <div class="b3 label light-purple-text">GOALS</div>
               <div class="b3">As an equity, trader Jeevan's goals are to improve his performance in his trades and to create innovative trading strategies.</div>
             </div>
-            <div class="card-half-block">
+            <div class="h-padding">
               <div class="b3 label light-purple-text">NEEDS</div>
               <div class="b3">Jeevan needs to be confident his trades even if they fail, and needs to grasp high-quality data and algorithms fit his trading strategy.</div>
             </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="section-blue">
+  <div class="section bg-light-blue">
     <div class="smaller-section container flex-h">
       <img src="images/about/nina.png" class="flexblock-headshot image left"/>
-      <div class="quote-bubble-white">
-        <div class="h3">Customers</div>
+      <div class="quote-bubble bg-white">
+        <div class="card-title">Customers</div>
         <div class="flex-h">
-          <div class="">
             <div class="b3">Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </div>
-          </div>
         </div>
       </div>
     </div>
