--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -88,19 +88,19 @@
         <div class="section-title">Our process</div>
         <img src="images/homepage/3-process-bar.svg" alt="" style="width: 800px" class="hp-process-bar">
         <div class="flex-h">
-            <div class="w-col-4 hp-process-card-wrapper">
+            <div class="w-col-4 card hp-process-card-wrapper">
                 <img src="images/homepage/3-process-icon1.svg" alt="" class="icon">
                 <div class="card-title red-text">Research Phase</div>
                 <div class="card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
                 <a data-aos="fade-up" href="research.html" class="button-solid red-bg">Read More</a>
             </div>
-            <div class="w-col-4 hp-process-card-wrapper">
+            <div class="w-col-4 card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon2.svg" alt="" class="icon">
                     <div class="card-title blue-text">Conceptual Phase</div>
                     <div class="card-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
                     <a data-aos="fade-up" href="concept.html" class="button-solid blue-bg">Read More</a>
             </div>
-            <div class="w-col-4 hp-process-card-wrapper">
+            <div class="w-col-4 card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon3.svg" alt="" class="icon">
                     <div class="card-title purple-text">Design Phase</div>
                     <div class="card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
