component lib done

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_june.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_june.html
@@ -114,7 +114,7 @@
 
 <!-- Carousal 2 -->
 <div class="section">
-  <div class="container light-cyan-bg slideshow-wrapper">
+  <div class="container bg-light-blue slideshow-wrapper">
     <div class="slideshow-item active">
       <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
       <div>
