--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_yingli.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_yingli.html
@@ -13,14 +13,12 @@
 
 <body>
 <div class="navbar">
-  <a href="index.html" class="nav-brand">
-    <img src="images/Utility/nav.png"/>
-  </a>
+  <a href="index.html" class="nav-brand"></a>
   <nav class="nav-menu">
-    <a href="research.html" >Research</a>
-    <a href="ideation.html" >Ideation</a>
+    <a href="research.html">Research</a>
+    <a href="ideation.html" class="active">Ideation</a>
     <a href="design.html" >Design</a>
-    <a href="about.html" class="active">About</a>
+    <a href="about.html">About</a>
     <a href="glossary.html" >Glossary</a>
   </nav>
   <div class="menu-button w-nav-button">
